# CelShading

./: CMakeLists.txt  CelShading.vcxproj  CelShading.vcxproj.filters  README.md  settings.json.example
Headers/: Camera.h  Entity.h  Loader.h  Mesh.h  Model.h  Renderer.h  RenderingOptions.h  Shader.h  TextRenderer.h
Headers/GameLogic/: GameObject.h
Headers/Renderer/: Animation.h  Bone.h  BoneAnim.h  Camera.h  Loader.h  Mesh.h  Model.h  Renderer.h  Screen.h  Shader.h  Terrain.h  TextRenderer.h  VertexStructs.h  stb_image.h
Resources/Models/Chiya/: Chiya.fbx  Sitting.overrideController  Standing.overrideController  Test.fbx
Resources/Models/Chiya/Materials/: backhair.mat  blush.mat  body.mat  clothing.mat  ears.mat  eyes.mat  hair.mat  teeth.mat  underpants2.mat
Resources/Models/dancing-stormtrooper/: Test.fbx
Resources/Models/simple/: simple.blend  simple.blend1  simple.dae  simple.fbx
Resources/Models/yagyuu/: scene.gltf
Resources/Shaders/: BorderShader.frag  BorderShader.vert  GeometryShader.frag  GeometryShader.vert  LampShader.frag  LampShader.vert  LightVolumeShader.frag  LightVolumeShader.vert  LightingPassShader.frag  LightingPassShader.vert  LightingShader.frag  LightingShader.vert  SkyboxShader.frag  SkyboxShader.vert  StencilShader.vert  TerrainShader.vert  TextShader.frag  TextShader.vert
Source/: Entity.cpp  gameLogic.cpp  main.cpp  stb_image.cpp
Source/GameLogic/: GameObject.cpp
Source/Renderer/: Animation.cpp  Bone.cpp  BoneAnim.cpp  Camera.cpp  Loader.cpp  Mesh.cpp  Model.cpp  Shader.cpp  Terrain.cpp  TextRenderer.cpp  stb_image.cpp
